Atualiza caminho da imagem principal

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="hero__media" data-animate>
             <div class="hero__media-inner">
               <img
-                src="../imagens/WhatsApp%20Image%202025-11-23%20at%2010.30.30.jpeg"
+                src="./imagens/imagem.jpeg"
                 alt="Retrato fotográfico de Julia Azarity para o portfólio"
                 loading="lazy"
               />
