Adiciona data de última atualização no rodapé

--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
     <footer class="site-footer">
       <div class="container">
         <p>© 2025 Julia Azarity. Todos os direitos reservados.</p>
+        <p class="footer-update">Última atualização dos dados: 09/12/2025.</p>
       </div>
     </footer>
 
