Reposiciona tagline no hero

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             <p class="hero__lead">
               Vivo dançando. Danço vivendo. Simples assim.
             </p>
+            <p class="hero__tagline">Ser ela, do jeito dela.</p>
             <div class="hero__actions">
               <a class="btn btn--gradient" href="#metricas">
                 Ver métricas
@@ -179,15 +180,6 @@
                     <span data-count data-format="compact" data-value="328757">0</span>
                   </p>
                   <p class="stat-card__label">seguidores</p>
-                </div>
-              </article>
-              <article class="stat-card">
-                <div class="stat-card__icon">
-                  <svg class="icon"><use href="#icon-star"></use></svg>
-                </div>
-                <div>
-                  <p class="eyebrow">Tagline</p>
-                  <p class="stat-card__value">Ser ela, do jeito dela.</p>
                 </div>
               </article>
             </div>
