Usa fonte cursiva na tagline

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/site.css" />
     <link rel="stylesheet" href="./styles/print.css" />
   </head>
